[package]
name = "dvpn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
derive_more = { version = "0.99.18" }
dns-lookup = "2.0.4"
http = "1.1.0"
http-body = "1.0.1"
httparse = "1.9.4"
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["stream"] }
rustls-pki-types = "1.7.0"
serde_json = "1.0.120"
tabled = "0.15.0"
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.11", features = ["io"] }
webpki-roots = "0.26.3"
